# sensor-data-validator

./: CMakeLists.txt  README.md  generate_data.py  sample.csv
include/sensor_validator/: CsvParser.hpp  SensorReading.hpp  ThresholdChecker.hpp
src/: CsvParser.cpp  ThresholdChecker.cpp  main.cpp
tests/: CMakeLists.txt  test_csv_parser.cpp  test_smoke.cpp  test_threshold_checker.cpp
tests/test_data/: sample_small.csv
